# extended_explain

./: Makefile  README.md  add_path_hook.patch  after_24225ad9aaf.patch  before_24225ad9aaf.patch  extended_explain copy.c  extended_explain--1.0.sql  extended_explain.c  extended_explain.control  extended_explain.h  meson.build  meson_options.txt  output_result.c
include/: extended_explain.h  output_result.h
test/expected/: eepaths.out  eequery.out
test/sql/: eepaths.sql  eequery.sql
